<resources>
    <string name="app_name">My Application</string>
    <string name="cnsc_logo">CNSC Logo</string>
    <string name="camarines_norte_state_college">CAMARINES NORTE STATE COLLEGE</string>
    <string name="student">Student</string>
    <string name="admin">Admin</string>
    <string name="student_id">Student ID</string>
    <string name="account_login">Account Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="enter_student_id">Enter Student ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="input_username">Input Username</string>
    <string name="your_student_id">Your Student ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="toggle_password_visibility">Toggle password visibility</string>
    <string name="input_student_id">Input Student ID</string>
    <string name="input_password">Input Password</string>
    <string name="re_enter_your_password">Re-Enter your Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email">Email</string>
    <string name="input_email">Input Email</string>
    <string name="you_are_logged_in">You are logged in!</string>
    <string name="tvpassword">PASSWORD</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="your_profile">Your Profile</string>
    <string name="student_id_">STUDENT ID</string>
    <string name="log_out">Log Out</string>
    <string name="email_address_create">Email Address</string>

    <string name="find_items">Find Items</string>
    <string name="category">Category</string>
    <string name="all">All</string>
    <string name="academic_materials">Academic Materials</string>
    <string name="writing_amp_drawing_tools">Writing &amp; Drawing Tools</string>
    <string name="personal_belongings">Personal Belongings</string>
    <string name="clothing_amp_accessories">Clothing &amp; Accessories</string>
    <string name="gadgets_amp_electronics">Gadgets &amp; Electronics</string>
    <string name="ids_amp_cards">IDs &amp; Cards</string>

    <!-- Item Card Strings -->
    <string name="todo1">TODO</string>
    <string name="name_of_the_item">Name of the Item</string>
    <string name="category_electronics">Category: Electronics</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="available">Available</string>

    <!-- Process Claim Strings -->
    <string name="todo">TODO</string>
    <string name="process">Process</string>
    <string name="please_answer_the_following">Please answer the following:</string>
    <string name="proof_image_1">Proof Image 1</string>
    <string name="proof_image_2">Proof Image 2</string>
    <string name="proof_image_3">Proof Image 3</string>
    <string name="insert_a_picture_required">Insert a picture (Required)</string>
    <string name="describe_the_item_for_verification">Describe the item for verification</string>
    <string name="describe_the_item_for_verification1">Describe the item for verification…</string>
    <string name="required">Required</string>
    <string name="where_to_claim_the_item">Where to claim the item?</string>
    <string name="will_be_provided_by_admin">Will be provided by admin</string>
    <string name="claim">Claim</string>

    <string name="admin_password">My Application</string>
    <string name="admin_username">My Application</string>
    <string name="enter_username">Enter username</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="process_claim">Process Claim</string>
    <string name="claimer_information">Claimer Information</string>
    <string name="full_name">Full Name</string>
    <string name="proof_of_ownership">Proof of Ownership</string>
    <string name="please_answer_the_following_claimer_name_and_id_required">Please answer the following (Claimer Name and ID required)</string>
    <string name="upload_at_least_one_photo_as_proof">Upload at least one photo as proof *</string>
    <string name="finder_information">Finder Information</string>

    <string name="pending">Pending</string>
    <string name="delete_item">Delete Item</string>
    <string name="back_button">Back</string>
    <string name="my_reports">My Reports</string>
    <string name="track_your_reported_items">Track your reported items</string>
    <!-- SwipeRefreshLayout Color Scheme -->
    <color name="holo_blue_bright">#33B5E5</color>
    <color name="holo_green_light">#99CC00</color>
    <color name="holo_orange_light">#FFBB33</color>
    <color name="holo_red_light">#FF4444</color>
</resources>